--- a/extensions/Kbuild
+++ b/extensions/Kbuild
@@ -16,7 +16,7 @@ obj-${build_LOGMARK}     += xt_LOGMARK.o
 obj-${build_PROTO}       += xt_PROTO.o
 obj-${build_SYSRQ}       += xt_SYSRQ.o
 obj-${build_TARPIT}      += xt_TARPIT.o
-obj-${build_tarhash}     += xt_tarhash.o
+obj-${build_sting}       += xt_sting.o
 obj-${build_condition}   += xt_condition.o
 obj-${build_fuzzy}       += xt_fuzzy.o
 obj-${build_geoip}       += xt_geoip.o
